objects/ChkBxObject__c.object
<CustomObject>
    <description>An object that has 4 flags that can be checked independently.</description>
    <fields>
        <fullName>ChkxMaster__c</fullName>
        <label>ChkxMaster</label>
        <referenceTo>ChkxMaster__c</referenceTo>
        <relationshipLabel>ChkBxObjects</relationshipLabel>
        <relationshipName>ChkBxObjects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Flag1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfFlag1__c</fullName>
        <formula>IF( Flag1__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumberOfFlag1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFlag2__c</fullName>
        <formula>IF( Flag2__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumberOfFlag2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfFlag3__c</fullName>
        <formula>IF( Flag3__c, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NumberOfFlag3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ChkBxObject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ChkBxObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChkBxObjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>